App: Remove the JFX webview and cleanup the building instructions.